--- a/resources/lprint-de.strings
+++ b/resources/lprint-de.strings
@@ -1,57 +1,69 @@
 "copies" = "Number of Copies";
-"job-state-reasons" = "Job Status";
-"job-state-reasons.aborted-by-system" = "Aborted.";
-"job-state-reasons.job-canceled-by-user" = "Canceled.";
-"job-state-reasons.job-completed-successfully" = "Printed.";
-"job-state-reasons.job-data-insufficient" = "Waiting for document.";
-"job-state-reasons.job-incoming" = "Receiving document.";
-"job-state-reasons.job-printing" = "Printing.";
-"job-state-reasons.job-stopped" = "Stopped.";
-"job-state-reasons.none" = "Pending.";
-"job-state-reasons.processing-to-stop-point" = "Stopping.";
-"media" = "Media Size";
-"media-col" = "Media";
-"media-size" = "Media Size";
-"media-size-name" = "Media Size";
-"media-source" = "Roll";
-"media-source.main-roll" = "Main Roll";
-"media-source.alternate-roll" = "Alternate Roll";
-"media-top-offset" = "Top Offset";
-"media-tracking" = "Label Tracking";
-"media-tracking.continuous" = "Continuous";
-"media-tracking.mark" = "Mark";
-"media-tracking.web" = "Web/Hole";
-"media-type" = "Media Type";
-"media-type.continuous" = "Continuous Paper";
-"media-type.labels" = "Cut Labels";
-"media-type.labels-continuous" = "Continuous Labels";
-"orientation-requested" = "Orientation";
-"orientation-requested.3" = "Portrait";
-"orientation-requested.4" = "Landscape";
-"orientation-requested.5" = "Reverse Landscape";
-"orientation-requested.6" = "Reverse Portrait";
-"orientation-requested.7" = "Automatic";
-"print-color-mode" = "Color Mode";
-"print-color-mode.bi-level" = "Black and White";
-"print-color-mode.monochrome" = "Grayscale";
-"print-content-optimize" = "Optimize";
-"print-content-optimize.auto" = "Automatically";
-"print-content-optimize.graphic" = "for Graphics";
-"print-content-optimize.photo" = "for Photographs";
-"print-content-optimize.text" = "for Text Only";
-"print-content-optimize.text-and-graphic" = "for Text and Graphics";
-"print-darkness" = "Print Darkness";
-"print-quality" = "Print Quality";
-"print-quality.3" = "Draft";
+"job-state" = "Auftragsstatus";
+"job-state.3" = "Anstehend";
+"job-state.4" = "Gehalten";
+"job-state.5" = "Verarbeiten";
+"job-state.6" = "Gestoppt";
+"job-state.7" = "Abgebrochen";
+"job-state.8" = "Abgebrochen";
+"job-state.9" = "Abgeschlossen";
+"job-state-reasons" = "Detaillierter Auftragsstatus";
+"job-state-reasons.aborted-by-system" = "Vom System abgebrochen.";
+"job-state-reasons.job-canceled-by-user" = "Auftrag durch den Benutzer abgebrochen.";
+"job-state-reasons.job-completed-successfully" = "Auftrag erfolgreich ausgeführt.";
+"job-state-reasons.job-data-insufficient" = "Unzureichende Auftragsdaten.";
+"job-state-reasons.job-incoming" = "Eingehender Auftrag.";
+"job-state-reasons.job-printing" = "Auftrag wird gedruckt.";
+"job-state-reasons.job-stopped" = "Druckauftrag gestoppt.";
+"job-state-reasons.none" = "Ohne.";
+"job-state-reasons.processing-to-stop-point" = "Verarbeitung zum Stopppunkt.";
+"media" = "Medien";
+"media-col" = "Medien";
+"media-size" = "Medienmaße";
+"media-size-name" = "Medienname";
+"media-source" = "Medienquelle";
+"media-source.alternate-roll" = "Alternative Rolle";
+"media-source.main-roll" = "Hauptrolle";
+"media-top-offset" = "Oberer Versatz";
+"media-tracking" = "Etikettenverfolgung";
+"media-tracking.continuous" = "Kontinuierlich";
+"media-tracking.mark" = "Markierung";
+"media-tracking.web" = "Loch";
+"media-type" = "Medienart";
+"media-type.continuous" = "Kontinuierlich";
+"media-type.labels" = "Etiketten";
+"media-type.labels-continuous" = "Etiketten Kontinuierlich";
+"orientation-requested" = "Ausrichtung";
+"orientation-requested.3" = "Hochformat";
+"orientation-requested.4" = "Querformat";
+"orientation-requested.5" = "Querformat umgedreht";
+"orientation-requested.6" = "Hochformat umgedreht";
+"orientation-requested.7" = "Automatisch";
+"print-color-mode" = "Druck-Farbmodus";
+"print-color-mode.bi-level" = "Text";
+"print-color-mode.monochrome" = "Einfarbig";
+"print-content-optimize" = "Druckoptimierung";
+"print-content-optimize.auto" = "Automatisch";
+"print-content-optimize.graphic" = "Grafiken";
+"print-content-optimize.photo" = "Foto";
+"print-content-optimize.text" = "Text";
+"print-content-optimize.text-and-graphic" = "Text und Grafiken";
+"print-darkness" = "Dunkelheit drucken";
+"print-quality" = "Druckqualität";
+"print-quality.3" = "Entwurf";
 "print-quality.4" = "Normal";
-"print-quality.5" = "Best";
-"print-speed" = "Print Speed";
-"printer-resolution" = "Print Resolution";
-"printer-state-reaosns" = "Printer Status";
-"printer-state-reasons.cover-open" = "Cover open.";
-"printer-state-reasons.media-empty" = "Out of paper.";
-"printer-state-reasons.media-jam" = "Paper jam.";
-"printer-state-reasons.media-low" = "Replace paper soon.";
-"printer-state-reasons.media-needed" = "Load paper.";
-"printer-state-reasons.none" = "Ready.";
-"printer-state-reasons.other" = "See printer.";
+"print-quality.5" = "Hoch";
+"print-speed" = "Druckgeschwindigkeit";
+"printer-resolution" = "Druckauflösung";
+"printer-state" = "Druckerstatus";
+"printer-state.3" = "Inaktiv";
+"printer-state.4" = "Verarbeiten";
+"printer-state.5" = "Gestoppt";
+"printer-state-reaosns" = "Detaillierter Druckerstatus";
+"printer-state-reasons.cover-open" = "Abdeckung offen.";
+"printer-state-reasons.media-empty" = "Medien leer.";
+"printer-state-reasons.media-jam" = "Medienstau.";
+"printer-state-reasons.media-low" = "Medien niedrig.";
+"printer-state-reasons.media-needed" = "Medien benötigt.";
+"printer-state-reasons.none" = "Ohne.";
+"printer-state-reasons.other" = "Andere.";
