--- a/resources/lprint-es.strings
+++ b/resources/lprint-es.strings
@@ -1,57 +1,69 @@
-"copies" = "Number of Copies";
-"job-state-reasons" = "Job Status";
-"job-state-reasons.aborted-by-system" = "Aborted.";
-"job-state-reasons.job-canceled-by-user" = "Canceled.";
-"job-state-reasons.job-completed-successfully" = "Printed.";
-"job-state-reasons.job-data-insufficient" = "Waiting for document.";
-"job-state-reasons.job-incoming" = "Receiving document.";
-"job-state-reasons.job-printing" = "Printing.";
-"job-state-reasons.job-stopped" = "Stopped.";
-"job-state-reasons.none" = "Pending.";
-"job-state-reasons.processing-to-stop-point" = "Stopping.";
-"media" = "Media Size";
-"media-col" = "Media";
-"media-size" = "Media Size";
-"media-size-name" = "Media Size";
-"media-source" = "Roll";
-"media-source.main-roll" = "Main Roll";
-"media-source.alternate-roll" = "Alternate Roll";
-"media-top-offset" = "Top Offset";
-"media-tracking" = "Label Tracking";
-"media-tracking.continuous" = "Continuous";
-"media-tracking.mark" = "Mark";
-"media-tracking.web" = "Web/Hole";
-"media-type" = "Media Type";
-"media-type.continuous" = "Continuous Paper";
-"media-type.labels" = "Cut Labels";
-"media-type.labels-continuous" = "Continuous Labels";
-"orientation-requested" = "Orientation";
-"orientation-requested.3" = "Portrait";
-"orientation-requested.4" = "Landscape";
-"orientation-requested.5" = "Reverse Landscape";
-"orientation-requested.6" = "Reverse Portrait";
-"orientation-requested.7" = "Automatic";
-"print-color-mode" = "Color Mode";
-"print-color-mode.bi-level" = "Black and White";
-"print-color-mode.monochrome" = "Grayscale";
-"print-content-optimize" = "Optimize";
-"print-content-optimize.auto" = "Automatically";
-"print-content-optimize.graphic" = "for Graphics";
-"print-content-optimize.photo" = "for Photographs";
-"print-content-optimize.text" = "for Text Only";
-"print-content-optimize.text-and-graphic" = "for Text and Graphics";
-"print-darkness" = "Print Darkness";
-"print-quality" = "Print Quality";
-"print-quality.3" = "Draft";
+"copies" = "Copias";
+"job-state" = "Estado de la impresión";
+"job-state.3" = "Pendiente";
+"job-state.4" = "Retenida";
+"job-state.5" = "Procesando";
+"job-state.6" = "Detenida";
+"job-state.7" = "Cancelado";
+"job-state.8" = "Interrumpido";
+"job-state.9" = "Completada";
+"job-state-reasons" = "Estado de la impresión detallado";
+"job-state-reasons.aborted-by-system" = "Interrumpido por el sistema.";
+"job-state-reasons.job-canceled-by-user" = "Impresión cancelada por el usuario.";
+"job-state-reasons.job-completed-successfully" = "Impresión completada correctamente.";
+"job-state-reasons.job-data-insufficient" = "Datos de impresión insuficientes.";
+"job-state-reasons.job-incoming" = "Impresión entrante.";
+"job-state-reasons.job-printing" = "Imprimiendo tarea.";
+"job-state-reasons.job-stopped" = "Detenida.";
+"job-state-reasons.none" = "Ninguna.";
+"job-state-reasons.processing-to-stop-point" = "Procesando hasta el punto de detención.";
+"media" = "Papel";
+"media-col" = "Papel";
+"media-size" = "Dimensiones del papel";
+"media-size-name" = "Nombre del soporte";
+"media-source" = "Fuente de papel";
+"media-source.alternate-roll" = "Rollo alternativo";
+"media-source.main-roll" = "Rollo principal";
+"media-top-offset" = "Desplazamiento superior";
+"media-tracking" = "Seguimiento de etiquetas";
+"media-tracking.continuous" = "Continuo";
+"media-tracking.mark" = "Mancha";
+"media-tracking.web" = "Agujero";
+"media-type" = "Tipo de papel";
+"media-type.continuous" = "Continuo";
+"media-type.labels" = "Etiquetas";
+"media-type.labels-continuous" = "Etiquetas continuas";
+"orientation-requested" = "Orientación";
+"orientation-requested.3" = "Vertical";
+"orientation-requested.4" = "Horizontal";
+"orientation-requested.5" = "Horizontal inversa";
+"orientation-requested.6" = "Vertical inversa";
+"orientation-requested.7" = "Automática";
+"print-color-mode" = "Modo de color de la impresión";
+"print-color-mode.bi-level" = "Texto";
+"print-color-mode.monochrome" = "Monocromo";
+"print-content-optimize" = "Optimización de la impresión";
+"print-content-optimize.auto" = "Automática";
+"print-content-optimize.graphic" = "Gráficos";
+"print-content-optimize.photo" = "Foto";
+"print-content-optimize.text" = "Texto";
+"print-content-optimize.text-and-graphic" = "Texto y gráficos";
+"print-darkness" = "Imprimir oscuridad";
+"print-quality" = "Calidad de impresión";
+"print-quality.3" = "Borrador";
 "print-quality.4" = "Normal";
-"print-quality.5" = "Best";
+"print-quality.5" = "Alta";
 "print-speed" = "Print Speed";
-"printer-resolution" = "Print Resolution";
-"printer-state-reaosns" = "Printer Status";
-"printer-state-reasons.cover-open" = "Cover open.";
-"printer-state-reasons.media-empty" = "Out of paper.";
-"printer-state-reasons.media-jam" = "Paper jam.";
-"printer-state-reasons.media-low" = "Replace paper soon.";
-"printer-state-reasons.media-needed" = "Load paper.";
-"printer-state-reasons.none" = "Ready.";
-"printer-state-reasons.other" = "See printer.";
+"printer-resolution" = "Resolución de la impresión";
+"printer-state" = "Estado de la impresora";
+"printer-state.3" = "Inactiva";
+"printer-state.4" = "Procesando";
+"printer-state.5" = "Detenida";
+"printer-state-reaosns" = "Estado de la impresora detallado";
+"printer-state-reasons.cover-open" = "Tapa abierta.";
+"printer-state-reasons.media-empty" = "Papel vacío.";
+"printer-state-reasons.media-jam" = "Atasco de papel.";
+"printer-state-reasons.media-low" = "Poco papel.";
+"printer-state-reasons.media-needed" = "Se necesita papel.";
+"printer-state-reasons.none" = "Ninguna.";
+"printer-state-reasons.other" = "Otra.";
