--- a/resources/lprint-fr.strings
+++ b/resources/lprint-fr.strings
@@ -1,57 +1,69 @@
-"copies" = "Number of Copies";
-"job-state-reasons" = "Job Status";
-"job-state-reasons.aborted-by-system" = "Aborted.";
-"job-state-reasons.job-canceled-by-user" = "Canceled.";
-"job-state-reasons.job-completed-successfully" = "Printed.";
-"job-state-reasons.job-data-insufficient" = "Waiting for document.";
-"job-state-reasons.job-incoming" = "Receiving document.";
-"job-state-reasons.job-printing" = "Printing.";
-"job-state-reasons.job-stopped" = "Stopped.";
-"job-state-reasons.none" = "Pending.";
-"job-state-reasons.processing-to-stop-point" = "Stopping.";
-"media" = "Media Size";
-"media-col" = "Media";
-"media-size" = "Media Size";
-"media-size-name" = "Media Size";
-"media-source" = "Roll";
-"media-source.main-roll" = "Main Roll";
-"media-source.alternate-roll" = "Alternate Roll";
-"media-top-offset" = "Top Offset";
-"media-tracking" = "Label Tracking";
-"media-tracking.continuous" = "Continuous";
-"media-tracking.mark" = "Mark";
-"media-tracking.web" = "Web/Hole";
-"media-type" = "Media Type";
-"media-type.continuous" = "Continuous Paper";
-"media-type.labels" = "Cut Labels";
-"media-type.labels-continuous" = "Continuous Labels";
+"copies" = "Copies";
+"job-state" = "État de la tâche";
+"job-state.3" = "En attente";
+"job-state.4" = "Retenue";
+"job-state.5" = "Traitement en cours";
+"job-state.6" = "Arrêtée";
+"job-state.7" = "Annulée";
+"job-state.8" = "Interrompue";
+"job-state.9" = "Terminée";
+"job-state-reasons" = "État détaillé de la tâche";
+"job-state-reasons.aborted-by-system" = "Interrompue par le système.";
+"job-state-reasons.job-canceled-by-user" = "Tâche annulée par l’utilisateur.";
+"job-state-reasons.job-completed-successfully" = "Tâche terminée.";
+"job-state-reasons.job-data-insufficient" = "Données sur la tâche insuffisantes.";
+"job-state-reasons.job-incoming" = "Réception de la tâche.";
+"job-state-reasons.job-printing" = "Impression de la tâche.";
+"job-state-reasons.job-stopped" = "Arrêtée.";
+"job-state-reasons.none" = "Aucun.";
+"job-state-reasons.processing-to-stop-point" = "Traitement jusqu’au point d’arrêt.";
+"media" = "Support";
+"media-col" = "Support";
+"media-size" = "Dimensions du support";
+"media-size-name" = "Nom du support";
+"media-source" = "Source du papier";
+"media-source.alternate-roll" = "Bobine secondaire";
+"media-source.main-roll" = "Bobine principale";
+"media-top-offset" = "Décalage supérieur";
+"media-tracking" = "Suivi des étiquettes";
+"media-tracking.continuous" = "Continu";
+"media-tracking.mark" = "Tache";
+"media-tracking.web" = "Bouge";
+"media-type" = "Type de papier";
+"media-type.continuous" = "Continu";
+"media-type.labels" = "Étiquettes";
+"media-type.labels-continuous" = "Étiquettes continues";
 "orientation-requested" = "Orientation";
 "orientation-requested.3" = "Portrait";
-"orientation-requested.4" = "Landscape";
-"orientation-requested.5" = "Reverse Landscape";
-"orientation-requested.6" = "Reverse Portrait";
-"orientation-requested.7" = "Automatic";
-"print-color-mode" = "Color Mode";
-"print-color-mode.bi-level" = "Black and White";
-"print-color-mode.monochrome" = "Grayscale";
-"print-content-optimize" = "Optimize";
-"print-content-optimize.auto" = "Automatically";
-"print-content-optimize.graphic" = "for Graphics";
-"print-content-optimize.photo" = "for Photographs";
-"print-content-optimize.text" = "for Text Only";
-"print-content-optimize.text-and-graphic" = "for Text and Graphics";
-"print-darkness" = "Print Darkness";
-"print-quality" = "Print Quality";
-"print-quality.3" = "Draft";
-"print-quality.4" = "Normal";
-"print-quality.5" = "Best";
-"print-speed" = "Print Speed";
-"printer-resolution" = "Print Resolution";
-"printer-state-reaosns" = "Printer Status";
-"printer-state-reasons.cover-open" = "Cover open.";
-"printer-state-reasons.media-empty" = "Out of paper.";
-"printer-state-reasons.media-jam" = "Paper jam.";
-"printer-state-reasons.media-low" = "Replace paper soon.";
-"printer-state-reasons.media-needed" = "Load paper.";
-"printer-state-reasons.none" = "Ready.";
-"printer-state-reasons.other" = "See printer.";
+"orientation-requested.4" = "Paysage";
+"orientation-requested.5" = "Paysage inversé";
+"orientation-requested.6" = "Portrait inversé";
+"orientation-requested.7" = "Automatique";
+"print-color-mode" = "Mode colorimétrique de l’impression";
+"print-color-mode.bi-level" = "Texte";
+"print-color-mode.monochrome" = "Monochrome";
+"print-content-optimize" = "Optimisation de l’impression";
+"print-content-optimize.auto" = "Automatique";
+"print-content-optimize.graphic" = "Graphismes";
+"print-content-optimize.photo" = "Photo";
+"print-content-optimize.text" = "Texte";
+"print-content-optimize.text-and-graphic" = "Texte et graphismes";
+"print-darkness" = "Imprimer l'obscurité";
+"print-quality" = "Qualité d’impression";
+"print-quality.3" = "Brouillon";
+"print-quality.4" = "Normale";
+"print-quality.5" = "Élevée";
+"print-speed" = "Vitesse d'impression";
+"printer-resolution" = "Résolution de l’impression";
+"printer-state" = "État de l’imprimante";
+"printer-state.3" = "Idle";
+"printer-state.4" = "Processing";
+"printer-state.5" = "Stopped";
+"printer-state-reaosns" = "État détaillé de l’imprimante";
+"printer-state-reasons.cover-open" = "Couverture ouverte.";
+"printer-state-reasons.media-empty" = "Support épuisé.";
+"printer-state-reasons.media-jam" = "Bourrage du support.";
+"printer-state-reasons.media-low" = "Support presque épuisé.";
+"printer-state-reasons.media-needed" = "Support requis.";
+"printer-state-reasons.none" = "Aucun.";
+"printer-state-reasons.other" = "Autre.";
