--- a/resources/lprint-it.strings
+++ b/resources/lprint-it.strings
@@ -1,57 +1,69 @@
-"copies" = "Number of Copies";
-"job-state-reasons" = "Job Status";
-"job-state-reasons.aborted-by-system" = "Aborted.";
-"job-state-reasons.job-canceled-by-user" = "Canceled.";
-"job-state-reasons.job-completed-successfully" = "Printed.";
-"job-state-reasons.job-data-insufficient" = "Waiting for document.";
-"job-state-reasons.job-incoming" = "Receiving document.";
-"job-state-reasons.job-printing" = "Printing.";
-"job-state-reasons.job-stopped" = "Stopped.";
-"job-state-reasons.none" = "Pending.";
-"job-state-reasons.processing-to-stop-point" = "Stopping.";
-"media" = "Media Size";
-"media-col" = "Media";
-"media-size" = "Media Size";
-"media-size-name" = "Media Size";
-"media-source" = "Roll";
-"media-source.main-roll" = "Main Roll";
-"media-source.alternate-roll" = "Alternate Roll";
-"media-top-offset" = "Top Offset";
-"media-tracking" = "Label Tracking";
-"media-tracking.continuous" = "Continuous";
-"media-tracking.mark" = "Mark";
-"media-tracking.web" = "Web/Hole";
-"media-type" = "Media Type";
-"media-type.continuous" = "Continuous Paper";
-"media-type.labels" = "Cut Labels";
-"media-type.labels-continuous" = "Continuous Labels";
-"orientation-requested" = "Orientation";
-"orientation-requested.3" = "Portrait";
-"orientation-requested.4" = "Landscape";
-"orientation-requested.5" = "Reverse Landscape";
-"orientation-requested.6" = "Reverse Portrait";
-"orientation-requested.7" = "Automatic";
-"print-color-mode" = "Color Mode";
-"print-color-mode.bi-level" = "Black and White";
-"print-color-mode.monochrome" = "Grayscale";
-"print-content-optimize" = "Optimize";
-"print-content-optimize.auto" = "Automatically";
-"print-content-optimize.graphic" = "for Graphics";
-"print-content-optimize.photo" = "for Photographs";
-"print-content-optimize.text" = "for Text Only";
-"print-content-optimize.text-and-graphic" = "for Text and Graphics";
-"print-darkness" = "Print Darkness";
-"print-quality" = "Print Quality";
-"print-quality.3" = "Draft";
-"print-quality.4" = "Normal";
-"print-quality.5" = "Best";
-"print-speed" = "Print Speed";
-"printer-resolution" = "Print Resolution";
-"printer-state-reaosns" = "Printer Status";
-"printer-state-reasons.cover-open" = "Cover open.";
-"printer-state-reasons.media-empty" = "Out of paper.";
-"printer-state-reasons.media-jam" = "Paper jam.";
-"printer-state-reasons.media-low" = "Replace paper soon.";
-"printer-state-reasons.media-needed" = "Load paper.";
-"printer-state-reasons.none" = "Ready.";
-"printer-state-reasons.other" = "See printer.";
+"copies" = "Copie";
+"job-state" = "Stato stampa";
+"job-state.3" = "In sospeso";
+"job-state.4" = "Bloccato";
+"job-state.5" = "Elaborazione in corso";
+"job-state.6" = "Interrotta";
+"job-state.7" = "Annullato";
+"job-state.8" = "Interrotto";
+"job-state.9" = "Completato";
+"job-state-reasons" = "Stato dettagliato stampa";
+"job-state-reasons.aborted-by-system" = "Interrotto dal sistema.";
+"job-state-reasons.job-canceled-by-user" = "Stampa annullata da utente.";
+"job-state-reasons.job-completed-successfully" = "Stampa completata.";
+"job-state-reasons.job-data-insufficient" = "Dati stampa insufficienti.";
+"job-state-reasons.job-incoming" = "Stampa in entrata.";
+"job-state-reasons.job-printing" = "Stampa.";
+"job-state-reasons.job-stopped" = "Interrotta.";
+"job-state-reasons.none" = "Nessuno.";
+"job-state-reasons.processing-to-stop-point" = "Punto di interruzione elaborazione.";
+"media" = "File multimediale";
+"media-col" = "File multimediale";
+"media-size" = "Dimensioni file multimediale";
+"media-size-name" = "Nome supporto";
+"media-source" = "Sorgente media";
+"media-source.alternate-roll" = "Secondo rotolo";
+"media-source.main-roll" = "Rotolo principale";
+"media-top-offset" = "Offset superiore";
+"media-tracking" = "Monitoraggio label";
+"media-tracking.continuous" = "Continuo";
+"media-tracking.mark" = "Segno";
+"media-tracking.web" = "Buco";
+"media-type" = "Tipo media";
+"media-type.continuous" = "Continuo";
+"media-type.labels" = "Etichette";
+"media-type.labels-continuous" = "Etichette continuo";
+"orientation-requested" = "Orientamento";
+"orientation-requested.3" = "Verticale";
+"orientation-requested.4" = "Orizzontale";
+"orientation-requested.5" = "Inverti orientamento orizzontale";
+"orientation-requested.6" = "Inverti orientamento verticale";
+"orientation-requested.7" = "Automatico";
+"print-color-mode" = "Modalità colore di stampa";
+"print-color-mode.bi-level" = "Testo";
+"print-color-mode.monochrome" = "Monocromo";
+"print-content-optimize" = "Ottimizzazione stampa";
+"print-content-optimize.auto" = "Automatica";
+"print-content-optimize.graphic" = "Grafici";
+"print-content-optimize.photo" = "Foto";
+"print-content-optimize.text" = "Testo";
+"print-content-optimize.text-and-graphic" = "Testo e grafica";
+"print-darkness" = "Stampa l'oscurità";
+"print-quality" = "Qualità stampa";
+"print-quality.3" = "Bozza";
+"print-quality.4" = "Normale";
+"print-quality.5" = "Alta";
+"print-speed" = "Velocità di stampa";
+"printer-resolution" = "Risoluzione stampa";
+"printer-state" = "Stato stampante";
+"printer-state.3" = "Bozza";
+"printer-state.4" = "Normale";
+"printer-state.5" = "Stopped";
+"printer-state-reaosns" = "Stato dettagliato stampante";
+"printer-state-reasons.cover-open" = "Coperchio aperto.";
+"printer-state-reasons.media-empty" = "File multimediale esaurito.";
+"printer-state-reasons.media-jam" = "Inceppamento file multimediale.";
+"printer-state-reasons.media-low" = "Livello file multimediale basso.";
+"printer-state-reasons.media-needed" = "Necessario file multimediale.";
+"printer-state-reasons.none" = "Nessuna.";
+"printer-state-reasons.other" = "Altro.";
